--- a/sadecefikirler/Web.config
+++ b/sadecefikirler/Web.config
@@ -10,8 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Server=185.149.100.60;Database=sadecefikirler_genel;User Id=sadecefikirler;Password=S0yled!m;" providerName="System.Data.SqlClient" />
-    <add name="sadecefikirlerEntities" connectionString="metadata=res://*/Models.SadecefikirlerModels.csdl|res://*/Models.SadecefikirlerModels.ssdl|res://*/Models.SadecefikirlerModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=185.149.100.60;initial catalog=sadecefikirler_genel;user id=sadecefikirler;password=S0yled!m;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="sadecefikirlerEntities" connectionString="metadata=res://*/Models.SadecefikirlerModels.csdl|res://*/Models.SadecefikirlerModels.ssdl|res://*/Models.SadecefikirlerModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=185.149.100.60;initial catalog=sadecefikirler_genel;user id=sadecefikirler;password=S0yled!m;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="sadecefikirlerEntities" connectionString="metadata=res://*/Models.SadecefikirlerModels.csdl|res://*/Models.SadecefikirlerModels.ssdl|res://*/Models.SadecefikirlerModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=185.149.100.60;initial catalog=sadecefikirler_genel;user id=sadecefikirler;password=S0yled!m;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
